<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:text="Bean&amp;Leaf"
            />

        <ImageButton
            android:id="@+id/map_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_white_24dp"
            android:layout_gravity="end"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:background="@color/colorPrimary"
            android:onClick="showPopup" />

    </RelativeLayout>

 <!--   <Button
        android:id="@+id/profileBtn"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:text="Profile"
        android:padding="10dp"
        android:layout_marginTop="80dp"
        android:paddingEnd="10dp" />-->

</fragment>