<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:src="@android:drawable/radiobutton_on_background"
        android:text="X"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Item Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/input_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="Menu Item"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Price Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="Price"
            android:importantForAutofill="yes"
            android:inputType="textPostalAddress"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Caffeine Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/input_caff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="Caffeine Amount"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add Menu Item Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_menu"
        android:layout_width="fill_parent"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="#536DFE"
        android:padding="12dp"
        android:text="Add Menu Item"
        android:textColor="@color/white"
        android:textSize="22dp" />


</LinearLayout>