<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alpha="1"
    android:background="@drawable/background"
    android:fillViewport="false"
    android:fitsSystemWindows="true"
    android:id = "@+id/addloc"
    tools:context=".AddLocActivity">
    <!--    -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">


        <!-- Name Label -->

<!--        <ImageView-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="250dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:src="@drawable/logo" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Location Name"
                android:inputType="textPersonName"
                android:textColor="#090808" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:importantForAutofill="yes"
                android:inputType="textPostalAddress"
                android:textColor="#020202" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <!-- A RecyclerView with some commonly used attributes -->


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        </RelativeLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <ImageView
            android:id="@id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            android:src="@android:drawable/ic_menu_add"
            android:onClick="ShowPopup"/>
        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imageView2"
            android:layout_margin="1dp"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="Add Menu"
            android:textColor="#000000" />

            <ImageButton
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:elevation="2dp"
                android:src="@android:drawable/ic_menu_delete"
                android:onClick="deleteMenu"/>
        </RelativeLayout>



        <!-- Add Location Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="fill_parent"
            android:layout_height="63dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:alpha="0.8"
            android:background="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="Add Location"
            android:textColor="@android:color/white"
            android:textSize="22dp" />

    </LinearLayout>
</ScrollView>